--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/store.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MERN Store</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/store.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MERN Store</title>
-</head>
+  <body>
+    <div id="root"></div>
 
-<body data-bs-theme="dark">
-  <div id="root"></div>
-
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
